DE2439 - Combined horizontal slider issues Remove scrollbars on MS Edge browsers by setting overflow to none instead of auto-hiding.

--- a/crossroads.net/styles/pages/streaming.scss
+++ b/crossroads.net/styles/pages/streaming.scss
@@ -1071,7 +1071,8 @@ streaming, landing {
             display: none;
           }
           overflow: -moz-scrollbars-none;
-          -ms-overflow-style: -ms-autohiding-scrollbar;
+          // -ms-overflow-style: -ms-autohiding-scrollbar;
+          -ms-overflow-style: none;
           -webkit-overflow-scrolling: touch;
         }
 
